# EP7SERVER

./: .gitignore  CMakeLists.txt  build_all.bat
AI_Backend_Engine/: AIEngine.cpp  AIEngine.h  CMakeLists.txt  OllamaLLMManager.cpp  OllamaLLMManager.h  PromptTemplateManager.cpp  PromptTemplateManager.h  main.cpp  ollama_llm_manager.py
AI_Frontend_Manager/: AiControlPanel.cpp  AiControlPanel.h  CMakeLists.txt  LoadBalancer.cpp  LoadBalancer.h  LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  NetworkManager.cpp  NetworkManager.h  PerformanceMonitor.cpp  PerformanceMonitor.h  StatusMonitor.cpp  StatusMonitor.h  main.cpp  resources.qrc
AI_LLM_Integration/: AIBehaviorSystems.cpp  AIDecisionCore.cpp  AIDecisionCore.h  AIDecisionCoreTest.cpp  AIDecisionEngine.cpp  AIDecisionEngine.h  AIIntegrationTest.cpp  AIManagementWidget.cpp  AIManagementWidget.h  AIPlayerBrain.cpp  AIPlayerBrain.h  AIPlayerGenerator.cpp  AIPlayerGenerator.h  AISystemIntegration.cpp  AISystemIntegration.h  AI_Decision_Core_Completion_Report.md  AcademyTheme.h  CMakeListsSimple.txt  CMakeLists_AI_Test.txt  CMakeLists_MinGW.txt  CMakeLists_New.txt  CMakeLists_Original_Backup.txt  CMakeLists_SimpleTest.txt  CMakeLists_Simple_Test.txt  CMakeLists_Ultimate_Portable.txt  CMakeLists_VM.txt  CMakeLists_VM_Simple.txt  CMakeLists_backup.txt  CMakeSimple.txt  CyberProgressBar.cpp  CyberProgressBar.h  FramelessWindow.cpp  FramelessWindow.h  GameAIDemo.cpp  GameAIProtocol.cpp  GameAIProtocol.h  GameWebSocketClient.cpp  GameWebSocketClient.h  GameWebSocketServer.cpp  GameWebSocketServer.h  (+69 more)
AI_LLM_Integration/Certificates/: JyTechTeam_Trusted.pfx
AI_LLM_Integration/Config/: academy_themes.json  default_settings.json  four_departments_database.sql  four_dept_templates.json  llm.json  llm_models_complete.json  llm_servers.json  prompt_templates.json
AI_LLM_Integration/Resources/: cyber_tech_style.qss  icons.qrc  resources.qrc.in
AI_LLM_Integration/Resources/icons/: ai_brain.png.placeholder  ran_logo.png.placeholder
AI_LLM_Integration/Scripts/: build_and_install.bat  build_and_install.sh  demo_launcher.bat  demo_launcher.sh  deploy_four_dept.bat  export_prompts.bat  export_prompts.py  export_prompts_simple.py  prepare_release.ps1  sign_executable.ps1  test_four_dept.py  test_four_dept_auto.py  test_results.json  validate_deployment.py
AI_LLM_Integration/Tests/: TestLLMGUI.cpp  TestOllamaLLMManager.cpp
AI_LLM_Integration/build_ai_test/: CMakeCache.txt
AI_LLM_Integration/build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
AI_LLM_Integration/build_new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ai_llm_integration.sln  ai_llm_integration.vcxproj  ai_llm_integration.vcxproj.filters  cmake_install.cmake
AI_LLM_Integration/build_quick/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
AI_LLM_Integration/build_quick/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
AI_LLM_Integration/build_quick/RANOnline_AI_Quick_autogen/: deps  moc_predefs.h
AI_LLM_Integration/build_simple/: CMakeCache.txt  Makefile  cmake_install.cmake  vm_simple_resources.rc
AI_LLM_Integration/build_ultimate_complete/: CMakeCache.txt  CMakeLists.txt  Makefile  Ultimate_Portable_最終部署報告.md  cmake_install.cmake  create_portable_package.bat  ultimate_portable_resources.rc
AI_LLM_Integration/build_ultimate_complete/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
AI_LLM_Integration/build_ultimate_complete/RANOnline_AI_Ultimate_Portable_autogen/: deps  moc_predefs.h
AI_LLM_Integration/build_ultimate_complete/RANOnline_AI_Ultimate_Portable_autogen/include/: main_ultimate_portable.moc  main_ultimate_portable.moc.d
AI_LLM_Integration/build_ultimate_complete/deploy_ultimate_complete/: AI_CONFIG.INI  README_完整自動化系統.md  README_繁體中文.md  SQL_資料庫表結構檢查.bat  VM_環境驗證測試.bat  VM_環境驗證測試.ps1  VM_環境驗證測試_簡化版.ps1  WebSocket驗證.bat  simple_package.ps1  一鍵啟動_Ultimate_Portable.bat  一鍵系統檢查與修復.bat  一鍵關閉.bat  完整系統打包工具.ps1  智能啟動_增強版.bat  智能啟動_增強版_SQL支援.bat  系統功能快速測試.bat  系統完整性檢查.bat  自動修復標準化完成報告.md  📦_完整系統打包工具.bat
AI_LLM_Integration/build_vm/: CMakeCache.txt  Makefile  app_resources.rc  cmake_install.cmake
AI_LLM_Integration/exports/: README.md  ai_prompts_export_four_dept.md  auto_test_report.md  auto_test_results.json
AI_LLM_Integration/portable/: README.txt
Communication_Protocol/: CMakeLists.txt  Protocol.cpp  Protocol.h
Config/: ai_config.json  app_config.json  database_config.json
Database_Sync_Module/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  ODBCConnectionManager.cpp  ODBCConnectionManager.h  ODBCTestApplication.cpp  ODBCTestApplication.h  main_odbc_test.cpp  test_odbc_example.cpp
Resources/styles/: cyberpunk.qss
Scripts/: setup_odbc_dsn.bat  setup_odbc_dsn.ps1
Tests/: CMakeLists.txt  LLMManagerUnitTest.h  test_ai_engine.cpp  test_communication_protocol.cpp  test_database_manager.cpp  test_load_balancer.cpp  test_performance_monitor.cpp
(+73 files in other folders)
